--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.8",
+    "google-genai>=1.2.0",
     "openai>=1.63.0",
     "psycopg2-binary>=2.9.10",
     "python-multipart>=0.0.20",
