--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ anyio==4.8.0
     #   watchfiles
 attrs==25.1.0
     # via aiohttp
+cachetools==5.5.2
+    # via google-auth
 certifi==2025.1.31
     # via
     #   httpcore
@@ -46,6 +48,10 @@ frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
+google-auth==2.38.0
+    # via google-genai
+google-genai==1.2.0
+    # via api-template (pyproject.toml)
 greenlet==3.1.1
     # via sqlalchemy
 h11==0.14.0
@@ -89,9 +95,16 @@ propcache==0.2.1
     #   yarl
 psycopg2-binary==2.9.10
     # via api-template (pyproject.toml)
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.1
+    # via google-auth
 pydantic==2.10.6
     # via
     #   fastapi
+    #   google-genai
     #   openai
 pydantic-core==2.27.2
     # via pydantic
@@ -108,13 +121,17 @@ python-multipart==0.0.20
 pyyaml==6.0.2
     # via uvicorn
 requests==2.32.3
-    # via twilio
+    # via
+    #   google-genai
+    #   twilio
 rich==13.9.4
     # via
     #   rich-toolkit
     #   typer
 rich-toolkit==0.13.2
     # via fastapi-cli
+rsa==4.9
+    # via google-auth
 shellingham==1.5.4
     # via typer
 sniffio==1.3.1
@@ -135,6 +152,7 @@ typing-extensions==4.12.2
     # via
     #   anyio
     #   fastapi
+    #   google-genai
     #   openai
     #   pydantic
     #   pydantic-core
@@ -152,7 +170,9 @@ uvloop==0.21.0
     # via uvicorn
 watchfiles==1.0.4
     # via uvicorn
-websockets==15.0
-    # via uvicorn
+websockets==14.2
+    # via
+    #   google-genai
+    #   uvicorn
 yarl==1.18.3
     # via aiohttp
